# autoresearch

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  program.md  pyproject.toml  setup.py
autoresearch/: __init__.py  cli.py
autoresearch/core/: __init__.py  agent.py  evaluator.py  experimenter.py  historian.py  runner.py
autoresearch/templates/: __init__.py
autoresearch/templates/prompt/: __init__.py
claude-code-mode/: README.md  program.md  setup.py
claude-code-mode/sentiment-research/: README.md  program.md
examples/: sentiment.json  setup_example.py
examples/sentiment-analysis/: README.md  eval_cases.json  program.md  prompt.txt  run_eval.py
examples/sentiment-classification/: README.md  eval.py  prompt.txt
