[project]
name = "autoresearch"
version = "0.1.0"
description = "General-purpose autonomous research framework for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.45.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
prompt = [
    "litellm>=1.0.0",
]
web = [
    "playwright>=1.40.0",
]
ml = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]
sql = [
    "sqlalchemy>=2.0.0",
]

[project.scripts]
autoresearch = "autoresearch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
